# hafnium

./: .gitignore  .gitmodules  image.mk  manifest.dts  pack-busybox-fvp.sh  pack-busybox.sh  run-backup.sh  run-fvp-linux.sh  run-fvp-two-hyper.sh  run-fvp.sh  run-linux.sh  run-qemu.sh  run.sh  test-shell.txt
dts/: convert.sh  manifest.dts  ns-hyper-manifest.dts  ns-manifest.dts  spmc.dts
gdb-bp/: ffa-client.bp  load.bp
inc/hf/: mm.h  vcpu.h
initrd/: hello  hello1  initrd.img  manifest.dtb  socket0
iris_debug/: iris_debug.py
src/: api.c  ffa_memory.c  load.c  mm.c  vcpu.c
src/arch/aarch64/: BUILD.gn  args.gni  mm.c
src/arch/aarch64/hftest/: BUILD.gn  interrupts_not_test.c  mm.c
src/arch/aarch64/hypervisor/: cpu.c  handler.c
test/linux/: linux.c
usr-inc/: hf-usr-protocol.h
usr-src/: Makefile
usr-src/apps/hello/: Makefile  main.c
usr-src/apps/init-driver/: Makefile  main.c
usr-src/ffa-client/: BUILD.gn  main.c
usr-vms/: BUILD.gn  gn.out
usr-vms/dead-loop/: BUILD.gn  main.c  manifest.dts
usr-vms/entry/: BUILD.gn  entry.S  sp_secondary_entry.S
usr-vms/hello/: BUILD.gn  main.c  manifest.dts
usr-vms/inc/: sp-mm.h
usr-vms/mem-borrower/: BUILD.gn  main.c  manifest.dts
usr-vms/optee/: BUILD.gn  manifest.dts
usr-vms/vm-utils/: BUILD.gn  sp-mm.c
usr_src/hello_world/: Makefile  hello.c
vmlib/aarch64/: BUILD.gn  smc_call.c
