import("//build/image/image.gni")
import("//build/toolchain/platform.gni")

vm_kernel("hello") {
    sources = [
        "main.c"
    ]
    deps = [
        "//src:dlog",
        "//src:panic",
        "//src:std",
        "//src:abort",
        "../entry:vm_entry",
        "//src/arch/${plat_arch}:entry",
    ]
}
manifest("hello-manifest") {
  source = "manifest.dts"
  output = "hello.dtb"
}

partition_package("hello-sp") {
  pm_offset = "0x1000"
  img_offset = "0x2000"
  files = [ [
        "hello.dtb",
        "hello.bin",
        ":hello",
        ":hello-manifest",
      ] ]
  output = "hello.img"
}
