import("//build/image/image.gni")
import("//build/toolchain/platform.gni")
copy("optee") {
    sources = [
      "/home/os/Documents/arm-develop/optee/optee_os/out/arm-plat-v8a_fvp/core/tee_no_head.bin",
    ]
    outputs = [
      "$target_out_dir/optee.bin"
    ]
}


manifest("optee-manifest") {
  source = "manifest.dts"
  output = "optee.dtb"
}

partition_package("optee-sp") {
  pm_offset = "0x1000"
  img_offset = "0x2000"
  files = [ [
        "optee.dtb",
        "optee.bin",
        ":optee",
        ":optee-manifest",
      ] ]
  output = "optee.img"
}
